Fix Scenarios visibility (remove 400vh height), update Benefits copy, reframe Product cards, simplify Security guarantees, clean footer

--- a/css/celeste7homepage.webflow.css
+++ b/css/celeste7homepage.webflow.css
@@ -2497,7 +2497,7 @@ blockquote {
 
 .portfolio-scroll-block {
   width: 100%;
-  height: 400vh;
+  height: auto;
   position: relative;
 }
 
@@ -3676,4 +3676,3 @@ blockquote {
 #w-node-_9a8ecae0-0308-f09f-ecd9-3c72666535b6-0851e0d1, #w-node-f4d573c8-721f-7e9e-3e63-5d4359e93ca2-0851e140 {
   grid-area: span 1 / span 1 / span 1 / span 1;
 }
-
